# py-vchasno

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-poc-results.md  task-3-transport-hardening.txt  task-4-files.txt  task-4-utils.txt  task-5-type-safety.txt  task-6-models.txt  task-7-config.txt
.sisyphus/notepads/async-first-migration/: decisions.md  learnings.md
.sisyphus/plans/: v0.2.0-review-fixes.md
.sisyphus/poc/task-1/: async_billing_poc.py  async_transport_poc.py  sync_billing_poc.py  sync_transport_poc.py
src/vchasno/: __init__.py  _files.py  _http.py  _state.py  _utils.py  client.py  exceptions.py
src/vchasno/_async/: __init__.py  _http.py  _pagination.py  client.py
src/vchasno/_async/endpoints/: __init__.py  _base.py  archive.py  billing.py  categories.py  children.py  cloud_signer.py  comments.py  company.py  delete_requests.py  documents.py  fields.py  groups.py  reports.py  reviews.py  roles.py  signatures.py  tags.py  templates.py  versions.py
src/vchasno/_sync/: __init__.py  _http.py  _pagination.py  client.py
src/vchasno/_sync/endpoints/: __init__.py  _base.py  archive.py  billing.py  categories.py  children.py  cloud_signer.py  comments.py  company.py  delete_requests.py  documents.py  fields.py  groups.py  reports.py  reviews.py  roles.py  signatures.py  tags.py  templates.py  versions.py
src/vchasno/endpoints/: _base.py  archive.py  billing.py  categories.py  children.py  cloud_signer.py  comments.py  company.py  delete_requests.py  documents.py  fields.py  groups.py  reports.py  reviews.py  roles.py  signatures.py  tags.py  templates.py  versions.py
src/vchasno/models/: __init__.py  _base.py  archive.py  cloud_signer.py  common.py  documents.py  enums.py  groups.py  roles.py  tags.py
tests/: conftest.py  helpers.py  test_base_endpoint.py  test_client.py  test_endpoints_archive.py  test_endpoints_cloud_signer.py  test_endpoints_company.py  test_endpoints_documents.py  test_endpoints_simple.py  test_exceptions.py  test_http.py  test_init.py  test_models.py  test_new_features.py  test_pagination.py  test_utils.py
