[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vchasno"
version = "0.1.0"
description = "Python SDK for Vchasno.EDO API v2"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "captainluzik" }]
keywords = ["vchasno", "edo", "api", "sdk", "document-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/captainluzik/py-vchasno"
Repository = "https://github.com/captainluzik/py-vchasno"
Issues = "https://github.com/captainluzik/py-vchasno/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/vchasno"]
